--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "less-loader": "^7.0.1",
     "regenerator-runtime": "^0.12.1",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.21.1",
     "vuex": "^3.2.0"
   },
   "devDependencies": {
