--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "flyio": "^0.6.2",
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
+    "pako": "^1.0.11",
+    "plus-websocket": "^1.0.5",
     "regenerator-runtime": "^0.12.1",
     "vue": "^2.6.11",
     "vue-i18n": "^8.21.1",
