--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "less-loader": "^7.0.1",
     "pako": "^1.0.11",
     "plus-websocket": "^1.0.5",
+    "qrcodejs2": "0.0.2",
     "regenerator-runtime": "^0.12.1",
     "vue": "^2.6.11",
     "vue-i18n": "^8.21.1",
