--- a/src/manifest.json
+++ b/src/manifest.json
@@ -53,7 +53,8 @@
             "sdkConfigs" : {
                 "ad" : {}
             }
-        }
+        },
+        "compilerVersion" : 2
     },
     /* SDK配置 */
     "quickapp" : {},
