--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@dcloudio/uni-quickapp-webview": "^2.0.0-28920200907001",
     "@dcloudio/uni-stat": "^2.0.0-28920200907001",
     "@vue/shared": "^3.0.0-rc.4",
+    "clipboard": "^2.0.6",
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
     "js-md5": "^0.7.3",
