--- a/src/manifest.json
+++ b/src/manifest.json
@@ -21,6 +21,12 @@
             "ignoreVersion" : true
         },
         "modules" : {},
+        "permissions":{
+            // ...
+            "Runtime": {
+                "description": "运行环境"
+            }
+        },
         /* 模块配置 */
         "distribute" : {
             /* 应用发布信息 */
@@ -99,7 +105,9 @@
                         "portrait-896h@3x" : "启动图/iphone/1242_2688.png",
                         "portrait-896h@2x" : "启动图/iphone/828_1792.png",
                         "iphonex" : "启动图/iphone/1125_2436.png",
-                        "retina55" : "启动图/iphone/1242_2208.png"
+                        "retina55" : "启动图/iphone/1242_2208.png",
+                        "retina40" : "启动图/iphone/1136_640.png",
+                        "retina47" : ""
                     }
                 }
             }
